Implemented laser portals, and more projectile behaviors

--- a/data/config/Geometry.ini
+++ b/data/config/Geometry.ini
@@ -16,8 +16,8 @@ Dynamic           = false
 [BP-Wall]
 Type              = box
 Solid             = true
-SelfFlags         = wall
-CheckMask         = pilotP1 # pilotP2 # ship # laserP1 # laserP2 # orbP1 # orbP2 # laserWallP1 # laserWallP2
+SelfFlags         = geometry
+CheckMask         = projectileP1 # projectileP2 # pilotP1 # pilotP2 # ship
 
 [O-WallFloor@O-Wall]
 Position          = (0, 532.5, 0)
