--- a/data/config/Menu.ini
+++ b/data/config/Menu.ini
@@ -35,7 +35,7 @@ Texture        = SpaceShooterRedux/Backgrounds/black.png
 Pivot          = center
 
 [O-PilotSelectIcon1@O-PilotSelectIcon]
-ShaderList     = SH-OutlineP1
+ShaderList     = SH-OutlineP1AndP2
 Position       = (-0.375, 0.125, -0.1)
 ChildList      = O-Pilot1IconP1
 
