--- a/data/config/Partition.ini
+++ b/data/config/Partition.ini
@@ -15,5 +15,5 @@ Dynamic           = false
 [BP-Partition]
 Type              = box
 Solid             = false
-SelfFlags         = partition
+SelfFlags         = space
 CheckMask         = pilotP1 # pilotP2
