--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -49,7 +49,7 @@ JumpInput         = DownwardP1
 
 [BP-PilotP1@BP-Pilot]
 SelfFlags         = pilotP1
-CheckMask         = wall # zone # partition # meleeP2 # laserP2 # orbP2 # laserWallP2
+CheckMask         = geometry # space # projectileP2
 
 [O-PilotP2]
 Body              = B-PilotP2
@@ -71,7 +71,7 @@ JumpInput         = DownwardP2
 
 [BP-PilotP2@BP-Pilot]
 SelfFlags         = pilotP2
-CheckMask         = wall # zone # partition # meleeP1 # laserP1 # orbP1 # laserWallP1
+CheckMask         = geometry # space # projectileP1
 
 ;Specific Pilots
 
@@ -122,7 +122,7 @@ PartList          = BP-PilotP1 # BP-Ship1 # BP-Melee1P1
 [BP-Melee1P1@BP-Melee]
 TopLeft           = (0, -16, 0)
 BottomRight       = (16, 16, 0)
-SelfFlags         = meleeP1
+SelfFlags         = space
 CheckMask         = pilotP2
 
 [O-Pilot1P2@O-Pilot1]
@@ -150,7 +150,7 @@ PartList          = BP-PilotP2 # BP-Ship1 # BP-Melee1P2
 [BP-Melee1P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
 BottomRight       = (0, 16, 0)
-SelfFlags         = meleeP2
+SelfFlags         = space
 CheckMask         = pilotP1
 
 [O-Pilot2@O-Pilot]
@@ -200,7 +200,7 @@ PartList          = BP-PilotP1 # BP-Ship2 # BP-Melee2P1
 [BP-Melee2P1@BP-Melee]
 TopLeft           = (0, -16, 0)
 BottomRight       = (16, 16, 0)
-SelfFlags         = meleeP1
+SelfFlags         = space
 CheckMask         = pilotP2
 
 [O-Pilot2P2@O-Pilot2]
@@ -228,7 +228,7 @@ PartList          = BP-PilotP2 # BP-Ship2 # BP-Melee2P2
 [BP-Melee2P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
 BottomRight       = (0, 16, 0)
-SelfFlags         = meleeP2
+SelfFlags         = space
 CheckMask         = pilotP1
 
 [O-Pilot3@O-Pilot]
@@ -278,7 +278,7 @@ PartList          = BP-PilotP1 # BP-Ship3 # BP-Melee3P1
 [BP-Melee3P1@BP-Melee]
 TopLeft           = (0, -16, 0)
 BottomRight       = (16, 16, 0)
-SelfFlags         = meleeP1
+SelfFlags         = space
 CheckMask         = pilotP2
 
 [O-Pilot3P2@O-Pilot3]
@@ -306,7 +306,7 @@ PartList          = BP-PilotP2 # BP-Ship3 # BP-Melee3P2
 [BP-Melee3P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
 BottomRight       = (0, 16, 0)
-SelfFlags         = meleeP2
+SelfFlags         = space
 CheckMask         = pilotP1
 
 [O-Pilot4@O-Pilot]
@@ -356,7 +356,7 @@ PartList          = BP-PilotP1 # BP-Ship4 # BP-Melee4P1
 [BP-Melee4P1@BP-Melee]
 TopLeft           = (0, -16, 0)
 BottomRight       = (16, 16, 0)
-SelfFlags         = meleeP1
+SelfFlags         = space
 CheckMask         = pilotP2
 
 [O-Pilot4P2@O-Pilot4]
@@ -384,7 +384,7 @@ PartList          = BP-PilotP2 # BP-Ship4 # BP-Melee4P2
 [BP-Melee4P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
 BottomRight       = (0, 16, 0)
-SelfFlags         = meleeP2
+SelfFlags         = space
 CheckMask         = pilotP1
 
 [O-Pilot5@O-Pilot]
@@ -434,7 +434,7 @@ PartList          = BP-PilotP1 # BP-Ship5 # BP-Melee5P1
 [BP-Melee5P1@BP-Melee]
 TopLeft           = (0, -16, 0)
 BottomRight       = (16, 16, 0)
-SelfFlags         = meleeP1
+SelfFlags         = space
 CheckMask         = pilotP2
 
 [O-Pilot5P2@O-Pilot5]
@@ -462,7 +462,7 @@ PartList          = BP-PilotP2 # BP-Ship5 # BP-Melee5P2
 [BP-Melee5P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
 BottomRight       = (0, 16, 0)
-SelfFlags         = meleeP2
+SelfFlags         = space
 CheckMask         = pilotP1
 
 [O-Pilot6@O-Pilot]
@@ -512,7 +512,7 @@ PartList          = BP-PilotP1 # BP-Ship6 # BP-Melee6P1
 [BP-Melee6P1@BP-Melee]
 TopLeft           = (0, -16, 0)
 BottomRight       = (16, 16, 0)
-SelfFlags         = meleeP1
+SelfFlags         = space
 CheckMask         = pilotP2
 
 [O-Pilot6P2@O-Pilot6]
@@ -540,7 +540,7 @@ PartList          = BP-PilotP2 # BP-Ship6 # BP-Melee6P2
 [BP-Melee6P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
 BottomRight       = (0, 16, 0)
-SelfFlags         = meleeP2
+SelfFlags         = space
 CheckMask         = pilotP1
 
 [O-Pilot7@O-Pilot]
@@ -590,7 +590,7 @@ PartList          = BP-PilotP1 # BP-Ship7 # BP-Melee7P1
 [BP-Melee7P1@BP-Melee]
 TopLeft           = (0, -16, 0)
 BottomRight       = (16, 16, 0)
-SelfFlags         = meleeP1
+SelfFlags         = space
 CheckMask         = pilotP2
 
 [O-Pilot7P2@O-Pilot7]
@@ -618,7 +618,7 @@ PartList          = BP-PilotP2 # BP-Ship7 # BP-Melee7P2
 [BP-Melee7P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
 BottomRight       = (0, 16, 0)
-SelfFlags         = meleeP2
+SelfFlags         = space
 CheckMask         = pilotP1
 
 [O-Pilot8@O-Pilot]
@@ -668,7 +668,7 @@ PartList          = BP-PilotP1 # BP-Ship8 # BP-Melee8P1
 [BP-Melee8P1@BP-Melee]
 TopLeft           = (0, -16, 0)
 BottomRight       = (16, 16, 0)
-SelfFlags         = meleeP1
+SelfFlags         = space
 CheckMask         = pilotP2
 
 [O-Pilot8P2@O-Pilot8]
@@ -696,7 +696,7 @@ PartList          = BP-PilotP2 # BP-Ship8 # BP-Melee8P2
 [BP-Melee8P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
 BottomRight       = (0, 16, 0)
-SelfFlags         = meleeP2
+SelfFlags         = space
 CheckMask         = pilotP1
 
 ;Melee
@@ -719,7 +719,7 @@ Type              = box
 Solid             = false
 TopLeft           = (0, 0, 0)
 BottomRight       = (960, 945, 0)
-SelfFlags         = zone
+SelfFlags         = space
 CheckMask         = pilotP1 # pilotP2
 
 [O-ZoneP1@O-Zone]
