--- a/data/config/Shader.ini
+++ b/data/config/Shader.ini
@@ -68,8 +68,12 @@ BorderColorStart       = (0.0, 1.0, 1.0) ; cyan
 BorderColorEnd     = (0.0, 0.0, 1.0) ; blue
 
 [SH-OutlineP2@SH-Outline]
-BorderColorStart      = (1.0, 0.6470588235, 0.0) ; orange
+BorderColorStart      = (1.0, 0.0, 1.0) ; magenta
 BorderColorEnd     = (1.0, 0.0, 0.0) ; red
+
+[SH-OutlineP1AndP2@SH-Outline]
+BorderColorStart      = (1.0, 1.0, 0.0) ; yellow
+BorderColorEnd     = (0.0, 1.0, 0.0) ; green
 
 [SH-OutlineText@SH-Outline]
 BorderThicknessX      = 0.0005
