--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -30,7 +30,7 @@ Pivot             = center
 Type              = box
 Solid             = true
 SelfFlags         = ship
-CheckMask         = wall
+CheckMask         = geometry
 
 [O-ShipP1]
 ShaderList        = SH-OutlineP1
@@ -408,7 +408,7 @@ Spawner           = SP-LaserP2
 Spawner           = SP-LaserWallP1
 
 [O-UpwardGun2P1@O-UpwardGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-LaserHeatseekingP1
 
 [O-DownwardGun2P1@O-DownwardGun]
 Spawner           = SP-LaserP1
@@ -420,7 +420,7 @@ Spawner           = SP-OrbP1
 Spawner           = SP-LaserWallP2
 
 [O-UpwardGun2P2@O-UpwardGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-LaserHeatseekingP2
 
 [O-DownwardGun2P2@O-DownwardGun]
 Spawner           = SP-LaserP2
@@ -580,17 +580,41 @@ Object            = O-LaserP1
 [SP-LaserP2@SP-Spawner]
 Object            = O-LaserP2
 
-[SP-OrbP1@SP-Spawner]
-Object            = O-OrbP1
+[SP-LaserHeatseekingP1@SP-Spawner]
+Object            = O-LaserHeatseekingP1
 
-[SP-OrbP2@SP-Spawner]
-Object            = O-OrbP2
+[SP-LaserHeatseekingP2@SP-Spawner]
+Object            = O-LaserHeatseekingP2
 
 [SP-LaserWallP1@SP-Spawner]
 Object            = O-LaserWallP1
 
 [SP-LaserWallP2@SP-Spawner]
 Object            = O-LaserWallP2
+
+[SP-OrbP1@SP-Spawner]
+Object            = O-OrbP1
+
+[SP-OrbP2@SP-Spawner]
+Object            = O-OrbP2
+
+[SP-PrismP1@SP-Spawner]
+Object            = O-PrismP1
+
+[SP-PrismP2@SP-Spawner]
+Object            = O-PrismP2
+
+[SP-TurretP1@SP-Spawner]
+Object            = O-TurretP1
+
+[SP-TurretP2@SP-Spawner]
+Object            = O-TurretP2
+
+[SP-BeamP1@SP-Spawner]
+Object            = O-BeamP1
+
+[SP-BeamP2@SP-Spawner]
+Object            = O-BeamP2
 
 ; Icons
 
