--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -20,6 +20,7 @@ Speed             = 1000
 
 [BP-Laser@BP-Projectile]
 Type              = box
+Solid             = false
 
 [O-LaserP1@O-Laser]
 Graphic           = G-LaserP1
@@ -32,8 +33,8 @@ Texture           = SpaceShooterRedux/PNG/Lasers/laserBlue03.png
 PartList          = BP-LaserP1
 
 [BP-LaserP1@BP-Laser]
-SelfFlags         = laserP1
-CheckMask         = wall # pilotP2
+SelfFlags         = projectileP1
+CheckMask         = geometry # space # pilotP2
 
 [O-LaserP2@O-Laser]
 Graphic           = G-LaserP2
@@ -46,8 +47,80 @@ Texture           = SpaceShooterRedux/PNG/Lasers/laserRed03.png
 PartList          = BP-LaserP2
 
 [BP-LaserP2@BP-Laser]
-SelfFlags         = laserP2
-CheckMask         = wall # pilotP1
+SelfFlags         = projectileP2
+CheckMask         = geometry # space # pilotP1
+
+[O-LaserHeatseeking@O-Projectile]
+; O-LaserHeatseeking Class Data
+Speed             = 1000
+
+[BP-LaserHeatseeking@BP-Projectile]
+Type              = box
+
+[O-LaserHeatseekingP1@O-LaserHeatseeking]
+Graphic           = G-LaserHeatseekingP1
+Body              = B-LaserHeatseekingP1
+
+[G-LaserHeatseekingP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Lasers/laserBlue03.png
+
+[B-LaserHeatseekingP1@B-Projectile]
+PartList          = BP-LaserHeatseekingP1
+
+[BP-LaserHeatseekingP1@BP-LaserHeatseeking]
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2
+
+[O-LaserHeatseekingP2@O-LaserHeatseeking]
+Graphic           = G-LaserHeatseekingP2
+Body              = B-LaserHeatseekingP2
+
+[G-LaserHeatseekingP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Lasers/laserRed03.png
+
+[B-LaserHeatseekingP2@B-Projectile]
+PartList          = BP-LaserHeatseekingP2
+
+[BP-LaserHeatseekingP2@BP-LaserHeatseeking]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1
+
+[O-LaserWall@O-Projectile]
+Rotation          = 90.0
+
+;O-LaserWall Class Data
+Speed             = 450
+
+[BP-LaserWall@BP-Projectile]
+Type              = box
+
+[O-LaserWallP1@O-LaserWall]
+Graphic           = G-LaserWallP1
+Body              = B-LaserWallP1
+
+[G-LaserWallP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Lasers/laserBlue03.png
+
+[B-LaserWallP1@B-Projectile]
+PartList          = BP-LaserWallP1
+
+[BP-LaserWallP1@BP-LaserWall]
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2
+
+[O-LaserWallP2@O-LaserWall]
+Graphic           = G-LaserWallP2
+Body              = B-LaserWallP2
+
+[G-LaserWallP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Lasers/laserRed03.png
+
+[B-LaserWallP2@B-Projectile]
+PartList          = BP-LaserWallP2
+
+[BP-LaserWallP2@BP-LaserWall]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1
 
 [O-Orb@O-Projectile]
 Scale             = (0.5, 0.5, 0.5)
@@ -70,8 +143,8 @@ Texture           = SpaceShooterRedux/PNG/ufoBlue.png
 PartList          = BP-OrbP1
 
 [BP-OrbP1@BP-Orb]
-SelfFlags         = orbP1
-CheckMask         = wall # pilotP2
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2
 
 [O-OrbP2@O-Orb]
 Graphic           = G-OrbP2
@@ -84,42 +157,110 @@ Texture           = SpaceShooterRedux/PNG/ufoRed.png
 PartList          = BP-OrbP2
 
 [BP-OrbP2@BP-Orb]
-SelfFlags         = orbP2
-CheckMask         = wall # pilotP1
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1
 
-[O-LaserWall@O-Projectile]
-Rotation          = 90.0
+[O-Turret@O-Projectile]
+;O-Turret Class Data
+Speed             = 800
 
-;O-LaserWall Class Data
-Speed             = 450
-
-[BP-LaserWall@BP-Projectile]
+[BP-Turret@BP-Projectile]
 Type              = box
 
-[O-LaserWallP1@O-LaserWall]
-Graphic           = G-LaserWallP1
-Body              = B-LaserWallP1
+[O-TurretP1@O-Turret]
+Graphic           = G-TurretP1
+Body              = B-TurretP1
 
-[G-LaserWallP1@G-Projectile]
-Texture           = SpaceShooterRedux/PNG/Lasers/laserBlue03.png
+[G-TurretP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Parts/cockpitBlue_4.png
 
-[B-LaserWallP1@B-Projectile]
-PartList          = BP-LaserWallP1
+[B-TurretP1@B-Projectile]
+PartList          = BP-TurretP1
 
-[BP-LaserWallP1@BP-LaserWall]
-SelfFlags         = laserWallP1
-CheckMask         = wall # pilotP2
+[BP-TurretP1@BP-Turret]
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2
 
-[O-LaserWallP2@O-LaserWall]
-Graphic           = G-LaserWallP2
-Body              = B-LaserWallP2
+[O-TurretP2@O-Turret]
+Graphic           = G-TurretP2
+Body              = B-TurretP2
 
-[G-LaserWallP2@G-Projectile]
-Texture           = SpaceShooterRedux/PNG/Lasers/laserRed03.png
+[G-TurretP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Parts/cockpitRed_4.png
 
-[B-LaserWallP2@B-Projectile]
-PartList          = BP-LaserWallP2
+[B-TurretP2@B-Projectile]
+PartList          = BP-TurretP2
 
-[BP-LaserWallP2@BP-LaserWall]
-SelfFlags         = laserWallP2
-CheckMask         = wall # pilotP1
+[BP-TurretP2@BP-Turret]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1
+
+[O-Prism@O-Projectile]
+;O-Prism Class Data
+Speed             = 300
+
+[BP-Prism@BP-Projectile]
+Type              = box
+
+[O-PrismP1@O-Prism]
+Graphic           = G-PrismP1
+Body              = B-PrismP1
+
+[G-PrismP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Meteors/meteorGrey_big4.png
+
+[B-PrismP1@B-Projectile]
+PartList          = BP-PrismP1
+
+[BP-PrismP1@BP-Prism]
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2 # projectileP1
+
+[O-PrismP2@O-Prism]
+Graphic           = G-PrismP2
+Body              = B-PrismP2
+
+[G-PrismP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Meteors/meteorBrown_big4.png
+
+[B-PrismP2@B-Projectile]
+PartList          = BP-PrismP2
+
+[BP-PrismP2@BP-Prism]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1 # projectileP2
+
+[O-Beam@O-Projectile]
+;O-Beam Class Data
+Speed             = 0
+
+[BP-Beam@BP-Projectile]
+Type              = box
+
+[O-BeamP1@O-Beam]
+Graphic           = G-BeamP1
+Body              = B-BeamP1
+
+[G-BeamP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Effects/fire08.png
+
+[B-BeamP1@B-Projectile]
+PartList          = BP-BeamP1
+
+[BP-BeamP1@BP-Beam]
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2
+
+[O-BeamP2@O-Beam]
+Graphic           = G-BeamP2
+Body              = B-BeamP2
+
+[G-BeamP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Effects/fire10.png
+
+[B-BeamP2@B-Projectile]
+PartList          = BP-BeamP2
+
+[BP-BeamP2@BP-Beam]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1
