Got turrets roughly working, though I need to determine how I can or if I need to modify their spawner ObjectSpeeds in terms of those spawner Object Speed attributes and fDT.

--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -161,6 +161,7 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
 
 [O-Turret@O-Projectile]
+Scale             = (0.5, 0.5, 1.0)
 ;O-Turret Class Data
 Speed             = 800
 
@@ -170,6 +171,7 @@ Type              = box
 [O-TurretP1@O-Turret]
 Graphic           = G-TurretP1
 Body              = B-TurretP1
+ChildList         = O-TurretGunP1
 
 [G-TurretP1@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/Parts/cockpitBlue_4.png
@@ -184,6 +186,7 @@ CheckMask         = geometry # pilotP2
 [O-TurretP2@O-Turret]
 Graphic           = G-TurretP2
 Body              = B-TurretP2
+ChildList         = O-TurretGunP2
 
 [G-TurretP2@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/Parts/cockpitRed_4.png
@@ -231,11 +234,14 @@ SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1 # projectileP2
 
 [O-Beam@O-Projectile]
+Scale             = (2.0, 48.0, 1.0)
+UseParentSpace    = position
 ;O-Beam Class Data
 Speed             = 0
 
 [BP-Beam@BP-Projectile]
 Type              = box
+Solid             = false
 
 [O-BeamP1@O-Beam]
 Graphic           = G-BeamP1
@@ -243,6 +249,7 @@ Body              = B-BeamP1
 
 [G-BeamP1@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/Effects/fire08.png
+Pivot             = left
 
 [B-BeamP1@B-Projectile]
 PartList          = BP-BeamP1
@@ -257,10 +264,46 @@ Body              = B-BeamP2
 
 [G-BeamP2@G-Projectile]
 Texture           = SpaceShooterRedux/PNG/Effects/fire10.png
+Pivot             = left
 
 [B-BeamP2@B-Projectile]
 PartList          = BP-BeamP2
 
 [BP-BeamP2@BP-Beam]
+SelfFlags         = projectileP2
+CheckMask         = geometry # pilotP1
+
+[O-Familiar@O-Projectile]
+;O-Familiar Class Data
+Speed             = 0
+
+[BP-Familiar@BP-Projectile]
+Type              = box
+
+[O-FamiliarP1@O-Familiar]
+Graphic           = G-FamiliarP1
+Body              = B-FamiliarP1
+
+[G-FamiliarP1@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Parts/cockpitBlue_1.png
+
+[B-FamiliarP1@B-Projectile]
+PartList          = BP-FamiliarP1
+
+[BP-FamiliarP1@BP-Familiar]
+SelfFlags         = projectileP1
+CheckMask         = geometry # pilotP2
+
+[O-FamiliarP2@O-Familiar]
+Graphic           = G-FamiliarP2
+Body              = B-FamiliarP2
+
+[G-FamiliarP2@G-Projectile]
+Texture           = SpaceShooterRedux/PNG/Parts/cockpitRed_1.png
+
+[B-FamiliarP2@B-Projectile]
+PartList          = BP-FamiliarP2
+
+[BP-FamiliarP2@BP-Familiar]
 SelfFlags         = projectileP2
 CheckMask         = geometry # pilotP1
