--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -131,11 +131,11 @@ ClipSizeDownward  = 1
 WaveSizeNeutral   = 1
 WaveSizeUpward    = 3
 WaveSizeDownward  = 1
-WaveSizeSuper     = 1
+WaveSizeSuper     = 5
 NumWavesNeutral   = 1
 NumWavesUpward    = 1
 NumWavesDownward  = 1
-NumWavesSuper     = 5
+NumWavesSuper     = 3
 MaxCooldownNeutral   = 1.0
 MaxCooldownUpward    = 1.0
 MaxCooldownDownward  = 1.0
@@ -380,6 +380,9 @@ Position          = (0.5, 0.0, 0.0)
 [O-SuperGun@O-Spawner]
 Position          = (0.0, 0.0, 0.0)
 
+[O-TurretGun@O-Spawner]
+Position          = (0.0, -0.5, 0.0)
+
 [O-NeutralGun1P1@O-NeutralGun]
 Spawner           = SP-LaserP1
 
@@ -432,25 +435,25 @@ Spawner           = SP-OrbP2
 Spawner           = SP-LaserP1
 
 [O-UpwardGun3P1@O-UpwardGun]
-Spawner           = SP-OrbP1
+Spawner           = SP-TurretP1
 
 [O-DownwardGun3P1@O-DownwardGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-BeamP1
 
 [O-SuperGun3P1@O-SuperGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-LaserWallP1
 
 [O-NeutralGun3P2@O-NeutralGun]
 Spawner           = SP-LaserP2
 
 [O-UpwardGun3P2@O-UpwardGun]
-Spawner           = SP-OrbP2
+Spawner           = SP-TurretP2
 
 [O-DownwardGun3P2@O-DownwardGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-BeamP2
 
 [O-SuperGun3P2@O-SuperGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-LaserWallP2
 
 [O-NeutralGun4P1@O-NeutralGun]
 Spawner           = SP-LaserP1
@@ -504,25 +507,25 @@ Spawner           = SP-LaserP2
 Spawner           = SP-LaserP1
 
 [O-UpwardGun6P1@O-UpwardGun]
-Spawner           = SP-OrbP1
+Spawner           = SP-FamiliarP1
 
 [O-DownwardGun6P1@O-DownwardGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-FamiliarP1
 
 [O-SuperGun6P1@O-SuperGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-FamiliarP1
 
 [O-NeutralGun6P2@O-NeutralGun]
 Spawner           = SP-LaserP2
 
 [O-UpwardGun6P2@O-UpwardGun]
-Spawner           = SP-OrbP2
+Spawner           = SP-FamiliarP2
 
 [O-DownwardGun6P2@O-DownwardGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-FamiliarP2
 
 [O-SuperGun6P2@O-SuperGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-FamiliarP2
 
 [O-NeutralGun7P1@O-NeutralGun]
 Spawner           = SP-LaserP1
@@ -531,10 +534,10 @@ Spawner           = SP-LaserP1
 Spawner           = SP-OrbP1
 
 [O-DownwardGun7P1@O-DownwardGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-PrismP1
 
 [O-SuperGun7P1@O-SuperGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-PrismP1
 
 [O-NeutralGun7P2@O-NeutralGun]
 Spawner           = SP-LaserP2
@@ -543,34 +546,40 @@ Spawner           = SP-LaserP2
 Spawner           = SP-OrbP2
 
 [O-DownwardGun7P2@O-DownwardGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-PrismP2
 
 [O-SuperGun7P2@O-SuperGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-PrismP2
 
 [O-NeutralGun8P1@O-NeutralGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-BeamP1
 
 [O-UpwardGun8P1@O-UpwardGun]
-Spawner           = SP-OrbP1
+Spawner           = SP-BeamP1
 
 [O-DownwardGun8P1@O-DownwardGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-TurretP1
 
 [O-SuperGun8P1@O-SuperGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-TurretP1
 
 [O-NeutralGun8P2@O-NeutralGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-BeamP2
 
 [O-UpwardGun8P2@O-UpwardGun]
-Spawner           = SP-OrbP2
+Spawner           = SP-BeamP2
 
 [O-DownwardGun8P2@O-DownwardGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-TurretP2
 
 [O-SuperGun8P2@O-SuperGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-TurretP2
+
+[O-TurretGunP1@O-TurretGun]
+Spawner           = SP-TurretLaserP1
+
+[O-TurretGunP2@O-TurretGun]
+Spawner           = SP-TurretLaserP2
 
 ; Spawners
 
@@ -615,6 +624,35 @@ Object            = O-BeamP1
 
 [SP-BeamP2@SP-Spawner]
 Object            = O-BeamP2
+
+[SP-FamiliarP1@SP-Spawner]
+Object            = O-FamiliarP1
+
+[SP-FamiliarP2@SP-Spawner]
+Object            = O-FamiliarP2
+
+[SP-TurretLaser@SP-Spawner]
+CleanOnDelete    = false
+WaveSize         = 1
+WaveDelay        = 0.5
+Position         = (0.0, 0.0, 0.0)
+Rotation         = 0.0
+Scale            = (1.0, 1.0, 1.0)
+Interpolate      = false
+Immediate        = false
+UseAlpha         = false
+UseColor         = false
+UseRotation      = false
+UseScale         = false
+UseRelativeSpeed = false
+UseSelfAsParent  = false
+IgnoreFromParent = none
+
+[SP-TurretLaserP1@SP-TurretLaser]
+Object           = O-LaserP1
+
+[SP-TurretLaserP2@SP-TurretLaser]
+Object           = O-LaserP2
 
 ; Icons
 
