Got parented objects moving along with their parents in a more natural way by utilizing joints. Next, I will need to create a TetheredProjectile class which will cover behavior of all of those projectiles which remain attached to their spawners.

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -95,3 +95,11 @@ UseParentSpace    = position
 
 [SP-Spawner]
 CleanOnDelete     = true ; Enforces the destruction of spawned objects upon that of their spawner.
+
+; Joints
+
+[J-Weld]
+Type		= weld
+ParentAnchor	= (0, 0, 0)
+ChildAnchor	= (0, 0, 0)
+Collide		= false
