--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -103,6 +103,7 @@ Body                 = B-Pilot1P1
 Position             = @O-PilotP1
 ShaderList           = @O-PilotP1
 ChildList            = O-Ship1P1 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP1
@@ -117,7 +118,7 @@ MeleeInput        = @O-PilotP1
 JumpInput         = @O-PilotP1
 
 [B-Pilot1P1@B-Pilot]
-PartList          = BP-PilotP1 # BP-Ship1 # BP-Melee1P1
+PartList          = BP-PilotP1 # BP-Melee1P1
 
 [BP-Melee1P1@BP-Melee]
 TopLeft           = (0, -16, 0)
@@ -131,6 +132,7 @@ Position             = @O-PilotP2
 Flip                 = @O-PilotP2
 ShaderList           = @O-PilotP2
 ChildList            = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP2
@@ -145,7 +147,7 @@ MeleeInput        = @O-PilotP2
 JumpInput         = @O-PilotP2
 
 [B-Pilot1P2@B-Pilot]
-PartList          = BP-PilotP2 # BP-Ship1 # BP-Melee1P2
+PartList          = BP-PilotP2 # BP-Melee1P2
 
 [BP-Melee1P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
@@ -181,6 +183,7 @@ Body                 = B-Pilot2P1
 Position             = @O-PilotP1
 ShaderList           = @O-PilotP1
 ChildList            = O-Ship2P1 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP1
@@ -195,7 +198,7 @@ MeleeInput        = @O-PilotP1
 JumpInput         = @O-PilotP1
 
 [B-Pilot2P1@B-Pilot]
-PartList          = BP-PilotP1 # BP-Ship2 # BP-Melee2P1
+PartList          = BP-PilotP1 # BP-Melee2P1
 
 [BP-Melee2P1@BP-Melee]
 TopLeft           = (0, -16, 0)
@@ -209,6 +212,7 @@ Position             = @O-PilotP2
 Flip                 = @O-PilotP2
 ShaderList           = @O-PilotP2
 ChildList            = O-Ship2P2 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP2
@@ -223,7 +227,7 @@ MeleeInput        = @O-PilotP2
 JumpInput         = @O-PilotP2
 
 [B-Pilot2P2@B-Pilot]
-PartList          = BP-PilotP2 # BP-Ship2 # BP-Melee2P2
+PartList          = BP-PilotP2 # BP-Melee2P2
 
 [BP-Melee2P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
@@ -259,6 +263,7 @@ Body                 = B-Pilot3P1
 Position             = @O-PilotP1
 ShaderList           = @O-PilotP1
 ChildList            = O-Ship3P1 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP1
@@ -273,7 +278,7 @@ MeleeInput        = @O-PilotP1
 JumpInput         = @O-PilotP1
 
 [B-Pilot3P1@B-Pilot]
-PartList          = BP-PilotP1 # BP-Ship3 # BP-Melee3P1
+PartList          = BP-PilotP1 # BP-Melee3P1
 
 [BP-Melee3P1@BP-Melee]
 TopLeft           = (0, -16, 0)
@@ -287,6 +292,7 @@ Position             = @O-PilotP2
 Flip                 = @O-PilotP2
 ShaderList           = @O-PilotP2
 ChildList            = O-Ship3P2 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP2
@@ -301,7 +307,7 @@ MeleeInput        = @O-PilotP2
 JumpInput         = @O-PilotP2
 
 [B-Pilot3P2@B-Pilot]
-PartList          = BP-PilotP2 # BP-Ship3 # BP-Melee3P2
+PartList          = BP-PilotP2 # BP-Melee3P2
 
 [BP-Melee3P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
@@ -337,6 +343,7 @@ Body                 = B-Pilot4P1
 Position             = @O-PilotP1
 ShaderList           = @O-PilotP1
 ChildList            = O-Ship4P1 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP1
@@ -351,7 +358,7 @@ MeleeInput        = @O-PilotP1
 JumpInput         = @O-PilotP1
 
 [B-Pilot4P1@B-Pilot]
-PartList          = BP-PilotP1 # BP-Ship4 # BP-Melee4P1
+PartList          = BP-PilotP1 # BP-Melee4P1
 
 [BP-Melee4P1@BP-Melee]
 TopLeft           = (0, -16, 0)
@@ -365,6 +372,7 @@ Position             = @O-PilotP2
 Flip                 = @O-PilotP2
 ShaderList           = @O-PilotP2
 ChildList            = O-Ship4P2 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP2
@@ -379,7 +387,7 @@ MeleeInput        = @O-PilotP2
 JumpInput         = @O-PilotP2
 
 [B-Pilot4P2@B-Pilot]
-PartList          = BP-PilotP2 # BP-Ship4 # BP-Melee4P2
+PartList          = BP-PilotP2 # BP-Melee4P2
 
 [BP-Melee4P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
@@ -415,6 +423,7 @@ Body                 = B-Pilot5P1
 Position             = @O-PilotP1
 ShaderList           = @O-PilotP1
 ChildList            = O-Ship5P1 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP1
@@ -429,7 +438,7 @@ MeleeInput        = @O-PilotP1
 JumpInput         = @O-PilotP1
 
 [B-Pilot5P1@B-Pilot]
-PartList          = BP-PilotP1 # BP-Ship5 # BP-Melee5P1
+PartList          = BP-PilotP1 # BP-Melee5P1
 
 [BP-Melee5P1@BP-Melee]
 TopLeft           = (0, -16, 0)
@@ -443,6 +452,7 @@ Position             = @O-PilotP2
 Flip                 = @O-PilotP2
 ShaderList           = @O-PilotP2
 ChildList            = O-Ship5P2 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP2
@@ -457,7 +467,7 @@ MeleeInput        = @O-PilotP2
 JumpInput         = @O-PilotP2
 
 [B-Pilot5P2@B-Pilot]
-PartList          = BP-PilotP2 # BP-Ship5 # BP-Melee5P2
+PartList          = BP-PilotP2 # BP-Melee5P2
 
 [BP-Melee5P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
@@ -493,6 +503,7 @@ Body                 = B-Pilot6P1
 Position             = @O-PilotP1
 ShaderList           = @O-PilotP1
 ChildList            = O-Ship6P1 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP1
@@ -507,7 +518,7 @@ MeleeInput        = @O-PilotP1
 JumpInput         = @O-PilotP1
 
 [B-Pilot6P1@B-Pilot]
-PartList          = BP-PilotP1 # BP-Ship6 # BP-Melee6P1
+PartList          = BP-PilotP1 # BP-Melee6P1
 
 [BP-Melee6P1@BP-Melee]
 TopLeft           = (0, -16, 0)
@@ -521,6 +532,7 @@ Position             = @O-PilotP2
 Flip                 = @O-PilotP2
 ShaderList           = @O-PilotP2
 ChildList            = O-Ship6P2 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP2
@@ -535,7 +547,7 @@ MeleeInput        = @O-PilotP2
 JumpInput         = @O-PilotP2
 
 [B-Pilot6P2@B-Pilot]
-PartList          = BP-PilotP2 # BP-Ship6 # BP-Melee6P2
+PartList          = BP-PilotP2 # BP-Melee6P2
 
 [BP-Melee6P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
@@ -571,6 +583,7 @@ Body                 = B-Pilot7P1
 Position             = @O-PilotP1
 ShaderList           = @O-PilotP1
 ChildList            = O-Ship7P1 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP1
@@ -585,7 +598,7 @@ MeleeInput        = @O-PilotP1
 JumpInput         = @O-PilotP1
 
 [B-Pilot7P1@B-Pilot]
-PartList          = BP-PilotP1 # BP-Ship7 # BP-Melee7P1
+PartList          = BP-PilotP1 # BP-Melee7P1
 
 [BP-Melee7P1@BP-Melee]
 TopLeft           = (0, -16, 0)
@@ -599,6 +612,7 @@ Position             = @O-PilotP2
 Flip                 = @O-PilotP2
 ShaderList           = @O-PilotP2
 ChildList            = O-Ship7P2 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP2
@@ -613,7 +627,7 @@ MeleeInput        = @O-PilotP2
 JumpInput         = @O-PilotP2
 
 [B-Pilot7P2@B-Pilot]
-PartList          = BP-PilotP2 # BP-Ship7 # BP-Melee7P2
+PartList          = BP-PilotP2 # BP-Melee7P2
 
 [BP-Melee7P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
@@ -649,6 +663,7 @@ Body                 = B-Pilot8P1
 Position             = @O-PilotP1
 ShaderList           = @O-PilotP1
 ChildList            = O-Ship8P1 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP1
@@ -663,7 +678,7 @@ MeleeInput        = @O-PilotP1
 JumpInput         = @O-PilotP1
 
 [B-Pilot8P1@B-Pilot]
-PartList          = BP-PilotP1 # BP-Ship8 # BP-Melee8P1
+PartList          = BP-PilotP1 # BP-Melee8P1
 
 [BP-Melee8P1@BP-Melee]
 TopLeft           = (0, -16, 0)
@@ -677,6 +692,7 @@ Position             = @O-PilotP2
 Flip                 = @O-PilotP2
 ShaderList           = @O-PilotP2
 ChildList            = O-Ship8P2 # O-HeadsUpText # O-Melee # O-Parry
+ChildJointList       = J-Weld
 
 ;Class Data
 UpInput           = @O-PilotP2
@@ -691,7 +707,7 @@ MeleeInput        = @O-PilotP2
 JumpInput         = @O-PilotP2
 
 [B-Pilot8P2@B-Pilot]
-PartList          = BP-PilotP2 # BP-Ship8 # BP-Melee8P2
+PartList          = BP-PilotP2 # BP-Melee8P2
 
 [BP-Melee8P2@BP-Melee]
 TopLeft           = (-16, -16, 0)
