--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -235,23 +235,28 @@ CheckMask         = geometry # pilotP1 # projectileP2
 
 [O-Beam@O-Projectile]
 Scale             = (2.0, 48.0, 1.0)
-UseParentSpace    = position
 ;O-Beam Class Data
 Speed             = 0
+
+[G-Beam@G-Projectile]
+Pivot             = bottom
+
+[B-Beam@B-Projectile]
+FixedRotation     = false ; Required because a FixedRotation of true breaks the weld joint between the Beam and its parent.
 
 [BP-Beam@BP-Projectile]
 Type              = box
 Solid             = false
+Density           = 0.00000001
 
 [O-BeamP1@O-Beam]
 Graphic           = G-BeamP1
 Body              = B-BeamP1
 
-[G-BeamP1@G-Projectile]
+[G-BeamP1@G-Beam]
 Texture           = SpaceShooterRedux/PNG/Effects/fire08.png
-Pivot             = left
 
-[B-BeamP1@B-Projectile]
+[B-BeamP1@B-Beam]
 PartList          = BP-BeamP1
 
 [BP-BeamP1@BP-Beam]
@@ -262,11 +267,10 @@ CheckMask         = geometry # pilotP2
 Graphic           = G-BeamP2
 Body              = B-BeamP2
 
-[G-BeamP2@G-Projectile]
+[G-BeamP2@G-Beam]
 Texture           = SpaceShooterRedux/PNG/Effects/fire10.png
-Pivot             = left
 
-[B-BeamP2@B-Projectile]
+[B-BeamP2@B-Beam]
 PartList          = BP-BeamP2
 
 [BP-BeamP2@BP-Beam]
