--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -1,5 +1,5 @@
 [O-Ship]
-Position          = (0, 0, 0)
+Body              = B-Ship
 Rotation          = 90.0
 
 ;O-Ship Class Data
@@ -26,9 +26,15 @@ MaxWaveDelaySuper    = 0.2
 [G-Ship]
 Pivot             = center
 
+[B-Ship]
+Dynamic           = true
+CustomGravity     = (0, 0, 0)
+PartList          = BP-Ship
+
 [BP-Ship]
 Type              = box
 Solid             = true
+Density           = 0.1
 SelfFlags         = ship
 CheckMask         = geometry
 
@@ -68,18 +74,16 @@ MaxWaveDelaySuper    = 0.2
 [G-Ship1@G-Ship]
 Texture           = SpaceShooterRedux/PNG/playerShip1_green.png
 
-[BP-Ship1@BP-Ship]
-TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
-BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
-
 [O-Ship1P1@O-Ship1]
 ShaderList           = @O-ShipP1
 ChildList            = O-NeutralGun1P1 # O-UpwardGun1P1 # O-DownwardGun1P1 # O-SuperGun1P1
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship1P2@O-Ship1]
 Flip                 = @O-ShipP2
 ShaderList           = @O-ShipP2
 ChildList            = O-NeutralGun1P2 # O-UpwardGun1P2 # O-DownwardGun1P2 # O-SuperGun1P2
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship2@O-Ship]
 Graphic           = G-Ship2
@@ -108,18 +112,16 @@ MaxWaveDelaySuper    = 0.2
 [G-Ship2@G-Ship]
 Texture           = SpaceShooterRedux/PNG/playerShip2_green.png
 
-[BP-Ship2@BP-Ship]
-TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
-BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
-
 [O-Ship2P1@O-Ship2]
 ShaderList           = @O-ShipP1
 ChildList            = O-NeutralGun2P1 # O-UpwardGun2P1 # O-DownwardGun2P1 # O-SuperGun2P1
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship2P2@O-Ship2]
 Flip                 = @O-ShipP2
 ShaderList           = @O-ShipP2
 ChildList            = O-NeutralGun2P2 # O-UpwardGun2P2 # O-DownwardGun2P2 # O-SuperGun2P2
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship3@O-Ship]
 Graphic           = G-Ship3
@@ -148,18 +150,16 @@ MaxWaveDelaySuper    = 0.2
 [G-Ship3@G-Ship]
 Texture           = SpaceShooterRedux/PNG/playerShip3_green.png
 
-[BP-Ship3@BP-Ship]
-TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
-BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
-
 [O-Ship3P1@O-Ship3]
 ShaderList           = @O-ShipP1
 ChildList            = O-NeutralGun3P1 # O-UpwardGun3P1 # O-DownwardGun3P1 # O-SuperGun3P1
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship3P2@O-Ship3]
 Flip                 = @O-ShipP2
 ShaderList           = @O-ShipP2
 ChildList            = O-NeutralGun3P2 # O-UpwardGun3P2 # O-DownwardGun3P2 # O-SuperGun3P2
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship4@O-Ship]
 Graphic           = G-Ship4
@@ -189,18 +189,16 @@ MaxWaveDelaySuper    = 0.0
 [G-Ship4@G-Ship]
 Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen1.png
 
-[BP-Ship4@BP-Ship]
-TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
-BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
-
 [O-Ship4P1@O-Ship4]
 ShaderList           = @O-ShipP1
 ChildList            = O-NeutralGun4P1 # O-UpwardGun4P1 # O-DownwardGun4P1 # O-SuperGun4P1
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship4P2@O-Ship4]
 Flip                 = @O-ShipP2
 ShaderList           = @O-ShipP2
 ChildList            = O-NeutralGun4P2 # O-UpwardGun4P2 # O-DownwardGun4P2 # O-SuperGun4P2
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship5@O-Ship]
 Graphic           = G-Ship5
@@ -230,18 +228,16 @@ MaxWaveDelaySuper    = 0.0
 [G-Ship5@G-Ship]
 Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen2.png
 
-[BP-Ship5@BP-Ship]
-TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
-BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
-
 [O-Ship5P1@O-Ship5]
 ShaderList           = @O-ShipP1
 ChildList            = O-NeutralGun5P1 # O-UpwardGun5P1 # O-DownwardGun5P1 # O-SuperGun5P1
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship5P2@O-Ship5]
 Flip                 = @O-ShipP2
 ShaderList           = @O-ShipP2
 ChildList            = O-NeutralGun5P2 # O-UpwardGun5P2 # O-DownwardGun5P2 # O-SuperGun5P2
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship6@O-Ship]
 Graphic           = G-Ship6
@@ -271,18 +267,16 @@ MaxWaveDelaySuper    = 0.0
 [G-Ship6@G-Ship]
 Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen3.png
 
-[BP-Ship6@BP-Ship]
-TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
-BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
-
 [O-Ship6P1@O-Ship6]
 ShaderList           = @O-ShipP1
 ChildList            = O-NeutralGun6P1 # O-UpwardGun6P1 # O-DownwardGun6P1 # O-SuperGun6P1
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship6P2@O-Ship6]
 Flip                 = @O-ShipP2
 ShaderList           = @O-ShipP2
 ChildList            = O-NeutralGun6P2 # O-UpwardGun6P2 # O-DownwardGun6P2 # O-SuperGun6P2
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship7@O-Ship]
 Graphic           = G-Ship7
@@ -312,18 +306,16 @@ MaxWaveDelaySuper    = 0.2
 [G-Ship7@G-Ship]
 Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen4.png
 
-[BP-Ship7@BP-Ship]
-TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
-BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
-
 [O-Ship7P1@O-Ship7]
 ShaderList           = @O-ShipP1
 ChildList            = O-NeutralGun7P1 # O-UpwardGun7P1 # O-DownwardGun7P1 # O-SuperGun7P1
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship7P2@O-Ship7]
 Flip                 = @O-ShipP2
 ShaderList           = @O-ShipP2
 ChildList            = O-NeutralGun7P2 # O-UpwardGun7P2 # O-DownwardGun7P2 # O-SuperGun7P2
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship8@O-Ship]
 Graphic           = G-Ship8
@@ -353,31 +345,42 @@ MaxWaveDelaySuper    = 0.2
 [G-Ship8@G-Ship]
 Texture           = SpaceShooterRedux/PNG/Enemies/enemyGreen5.png
 
-[BP-Ship8@BP-Ship]
-TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
-BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
-
 [O-Ship8P1@O-Ship8]
 ShaderList           = @O-ShipP1
 ChildList            = O-NeutralGun8P1 # O-UpwardGun8P1 # O-DownwardGun8P1 # O-SuperGun8P1
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 [O-Ship8P2@O-Ship8]
 Flip                 = @O-ShipP2
 ShaderList           = @O-ShipP2
 ChildList            = O-NeutralGun8P2 # O-UpwardGun8P2 # O-DownwardGun8P2 # O-SuperGun8P2
+ChildJointList       = J-Weld # J-Weld # J-Weld # J-Weld
 
 ; Guns
 
-[O-NeutralGun@O-Spawner]
+[O-Gun@O-Spawner]
+Body              = B-Gun
+
+[B-Gun]
+Dynamic           = true
+CustomGravity     = (0, 0, 0)
+PartList          = BP-Gun
+
+[BP-Gun]
+Type              = box
+TopLeft           = (-5, -5, 0)
+BottomRight       = (5, 5, 0)
+
+[O-NeutralGun@O-Gun]
 Position          = (0.0, -0.5, 0.0)
 
-[O-UpwardGun@O-Spawner]
+[O-UpwardGun@O-Gun]
 Position          = (-0.5, 0.0, 0.0)
 
-[O-DownwardGun@O-Spawner]
+[O-DownwardGun@O-Gun]
 Position          = (0.5, 0.0, 0.0)
 
-[O-SuperGun@O-Spawner]
+[O-SuperGun@O-Gun]
 Position          = (0.0, 0.0, 0.0)
 
 [O-TurretGun@O-Spawner]
@@ -619,10 +622,13 @@ Object            = O-TurretP1
 [SP-TurretP2@SP-Spawner]
 Object            = O-TurretP2
 
-[SP-BeamP1@SP-Spawner]
+[SP-Beam@SP-Spawner]
+UseSelfAsParent   = true
+
+[SP-BeamP1@SP-Beam]
 Object            = O-BeamP1
 
-[SP-BeamP2@SP-Spawner]
+[SP-BeamP2@SP-Beam]
 Object            = O-BeamP2
 
 [SP-FamiliarP1@SP-Spawner]
@@ -642,7 +648,7 @@ Interpolate      = false
 Immediate        = false
 UseAlpha         = false
 UseColor         = false
-UseRotation      = false
+UseRotation      = true
 UseScale         = false
 UseRelativeSpeed = false
 UseSelfAsParent  = false
