Implemented ScrollMod Raycast and GetPosition methods. Tomorrow, I will replace the Ship3 Raycasting with the newly written method, and implement a ScrollMod version of GetScale as well.

--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -235,6 +235,7 @@ CheckMask         = geometry # pilotP1 # projectileP2
 
 [O-Beam@O-Projectile]
 Scale             = (2.0, 48.0, 1.0)
+LifeTime          = 0.5
 ;O-Beam Class Data
 Speed             = 0
 
