Made some ScrollMod quality of life changes, like vastly improving its CreateObject method such that parameters passed in only affect the object being created, and not future ones. Also Got some of the Ship4 attacks working.

--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -2,6 +2,8 @@
 LifeTime          = 5.0
 HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
 UseParentSpace    = position
+;O-Projectile Class Data
+Tethered          = false
 
 [G-Projectile]
 Pivot             = center
@@ -237,6 +239,7 @@ CheckMask         = geometry # pilotP1 # projectileP2
 Scale             = (2.0, 48.0, 1.0)
 LifeTime          = 0.5
 ;O-Beam Class Data
+Tethered          = true
 Speed             = 0
 
 [G-Beam@G-Projectile]
