--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -166,21 +166,21 @@ Graphic           = G-Ship4
 Rotation          = -90.0
 
 ;Class Data
-ClipSizeNeutral   = 3
-ClipSizeUpward    = 0
-ClipSizeDownward  = 0
-WaveSizeNeutral   = 1
+ClipSizeNeutral   = 2
+ClipSizeUpward    = 1
+ClipSizeDownward  = 1
+WaveSizeNeutral   = 3
 WaveSizeUpward    = 1
-WaveSizeDownward  = 1
-WaveSizeSuper     = 1
+WaveSizeDownward  = 3
+WaveSizeSuper     = 24
 NumWavesNeutral   = 1
-NumWavesUpward    = 1
+NumWavesUpward    = 20
 NumWavesDownward  = 1
 NumWavesSuper     = 1
-MaxCooldownNeutral   = 0.25
-MaxCooldownUpward    = 0
-MaxCooldownDownward  = 0
-MaxCooldownSuper     = 0
+MaxCooldownNeutral   = 1.0
+MaxCooldownUpward    = 1.0
+MaxCooldownDownward  = 1.0
+MaxCooldownSuper     = 1.0 ; 120
 MaxWaveDelayNeutral  = 0.0
 MaxWaveDelayUpward   = 0.0
 MaxWaveDelayDownward = 0.0
@@ -459,25 +459,25 @@ Spawner           = SP-BeamP2
 Spawner           = SP-LaserWallP2
 
 [O-NeutralGun4P1@O-NeutralGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-OrbP1
 
 [O-UpwardGun4P1@O-UpwardGun]
 Spawner           = SP-OrbP1
 
 [O-DownwardGun4P1@O-DownwardGun]
-Spawner           = SP-LaserP1
+Spawner           = SP-BeamP1
 
 [O-SuperGun4P1@O-SuperGun]
 Spawner           = SP-LaserP1
 
 [O-NeutralGun4P2@O-NeutralGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-OrbP2
 
 [O-UpwardGun4P2@O-UpwardGun]
 Spawner           = SP-OrbP2
 
 [O-DownwardGun4P2@O-DownwardGun]
-Spawner           = SP-LaserP2
+Spawner           = SP-BeamP2
 
 [O-SuperGun4P2@O-SuperGun]
 Spawner           = SP-LaserP2
